<resources>
    <string name="app_name">EP5</string>
    <string name="accountTipString">账号：</string>
    <string name="passwdTipString">密码：</string>
    <string name="loginButton">登录</string>
    <string name="ip">IP：</string>
    <string name="submit">提交IP</string>
    <string name="temp_text">温  度  分  析</string>
    <string name="hum_text">湿  度  分  析</string>
    <string name="title">智 能 家 居</string>
    <string name="home_page">主页</string>
    <string name="analyze_data">统计详情</string>
    <string name="analyze_title">统 计</string>
    <string name="real_time_detection">实时监测</string>
    <string name="temperature">温度</string>
    <string name="humidity">湿度</string>
    <string name="temp_advise">温度建议</string>
    <string name="hum_advise">湿度建议</string>
    <string name="n_u_l_l">NULL</string>
    <string name="control_title">控 制 面 板</string>
    <string name="open">开 启</string>
    <string name="close">关 闭</string>
    <string name="status">状态：</string>
    <string name="light">灯光</string>
    <string name="curtain">窗帘</string>
    <string name="humidifier">加湿器</string>
    <string name="dehumidifier">除湿器</string>
</resources>