<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/title" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <!--        <ImageView-->
        <!--            android:id="@+id/logo"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="100dp"-->
        <!--            android:layout_gravity="center_horizontal"-->
        <!--            android:layout_marginBottom="40dp"-->
        <!--            android:rotationX="0"-->
        <!--            android:src="@drawable/profile" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/AccountTip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/accountTipString"
                android:textColor="#EFE6E6"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#FFFFFF"
                android:textColor="#ECE4E4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PasswdTip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTintMode="multiply"
                android:gravity="center"
                android:text="@string/passwdTipString"
                android:textColor="#EFE9E9"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#FFFFFF"
                android:inputType="textWebPassword"
                android:password="true"
                android:textColor="#E1D0D0" />


        </LinearLayout>


        <Button
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:backgroundTint="#4AC0F4"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/loginButton"
            android:textColor="#F6FBF7"
            android:textSize="24sp" />

        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:gravity="bottom"-->
        <!--            android:orientation="horizontal">-->

        <!--            <Button-->
        <!--                android:id="@+id/register"-->
        <!--                android:layout_width="50dp"-->
        <!--                android:layout_height="30dp"-->
        <!--                android:background="#00FFFFFF"-->
        <!--                android:gravity="bottom|left"-->
        <!--                android:paddingLeft="10dp"-->
        <!--                android:paddingTop="0dp"-->
        <!--                android:text="@string/register"-->
        <!--                android:textColor="#000000"-->
        <!--                android:textSize="10sp" />-->

        <!--            <LinearLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:gravity="right"-->
        <!--                android:orientation="horizontal">-->


        <!--                <Button-->
        <!--                    android:id="@+id/forgetPasswd"-->
        <!--                    android:layout_width="60dp"-->
        <!--                    android:layout_height="30dp"-->
        <!--                    android:background="#00FFFFFF"-->
        <!--                    android:gravity="bottom|right"-->
        <!--                    android:paddingLeft="0dp"-->
        <!--                    android:paddingTop="0dp"-->
        <!--                    android:paddingRight="10dp"-->
        <!--                    android:text="@string/forgetPasswd"-->
        <!--                    android:textColor="#000000"-->
        <!--                    android:textSize="10sp" />-->
        <!--            </LinearLayout>-->
        <!--        </LinearLayout>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical|end"
            android:text="@string/ip"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:backgroundTint="#27302E2E"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text=""
            android:textColor="#F3EFEF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/ip_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>